# OdooAiDeployer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: _deploy-dev.yml  _export-baseline.yml  _promote.yml  _rollback.yml  _validate.yml
deployer/: __init__.py  audit.py  cli.py  deploy.py  export_baseline.py  github_setup.py  hash_changeset.py  odoo_client.py  preflight.py  restricted_paths.py  rollback.py  validate_changeset.py  verify.py
deployer/handlers/: __init__.py  _common.py  create_automated_action.py  create_cron.py  create_custom_model.py  create_field.py  create_menu.py  create_record.py  create_server_action.py  create_view.py  update_record.py  update_view.py
docs/: architecture.md  changeset-format.md  setup-new-odoo-instance.md
scripts/: bootstrap_instance_repo.py
templates/env-example-files/: dev.env.example  production.env.example  staging.env.example
templates/instance-repo-template/: .gitignore  README.md
templates/instance-repo-template/.github/workflows/: deploy-dev.yml  export-baseline.yml  promote-prod.yml  promote-staging.yml  rollback.yml  validate.yml
templates/instance-repo-template/config/: instance.yaml
templates/instance-repo-template/config/blocklist/: README.md  models.txt  operation_types.txt  xml_ids.txt
